cmake_minimum_required(VERSION 4.0.0)
project(C-wars VERSION 0.1.2)
find_package(Curses REQUIRED)
set (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
include_directories(${CURSES_INCLUDE_DIR})
add_executable(${PROJECT_NAME} main.c libs/string.c libs/conversor.c libs/hashMap.c libs/gameRules.c)
target_link_libraries(C-wars ${CURSES_LIBRARIES})
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
set(CPACK_ARCHIVE_COMPONENT_INSTALL 1)
	include(CPack)

